# git2md

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  config.py  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  start.bat  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
static/css/: style.css
static/js/: main.js
templates/: admin.html  index.html  settings.html
tests/: test_file_processor.py  test_validator.py
utils/: __init__.py  file_processor.py  github_handler.py  validator.py
